--- a/mandelbulber2/formula/ui/menger_v6.ui
+++ b/mandelbulber2/formula/ui/menger_v6.ui
@@ -664,7 +664,7 @@
         <item row="4" column="0">
          <widget class="QLabel" name="label_36">
           <property name="text">
-           <string notr="true">c:</string>
+           <string notr="true">angleC:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -674,7 +674,7 @@
         <item row="2" column="0">
          <widget class="QLabel" name="label_34">
           <property name="text">
-           <string notr="true">b:</string>
+           <string notr="true">angleB:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -684,7 +684,7 @@
         <item row="1" column="0">
          <widget class="QLabel" name="label_35">
           <property name="text">
-           <string notr="true">a:</string>
+           <string notr="true">angleA:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -750,7 +750,7 @@
         <item row="3" column="0">
          <widget class="QLabel" name="label_37">
           <property name="text">
-           <string notr="true">0:</string>
+           <string notr="true">angle45:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -802,28 +802,28 @@
         <item row="1" column="1">
          <widget class="QLabel" name="label_133">
           <property name="text">
-           <string notr="true">a1</string>
+           <string notr="true">b</string>
           </property>
          </widget>
         </item>
         <item row="2" column="1">
          <widget class="QLabel" name="label_134">
           <property name="text">
-           <string notr="true">t1</string>
+           <string notr="true">c</string>
           </property>
          </widget>
         </item>
         <item row="0" column="1">
          <widget class="QLabel" name="label_135">
           <property name="text">
-           <string notr="true">zc.x</string>
+           <string notr="true">a</string>
           </property>
          </widget>
         </item>
         <item row="0" column="0" rowspan="3">
          <widget class="QLabel" name="label_114">
           <property name="text">
-           <string>offset:</string>
+           <string>z.x offsets:</string>
           </property>
          </widget>
         </item>
@@ -1464,25 +1464,25 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
+  </customwidget>
+  <customwidget>
    <class>MyGroupBox</class>
    <extends>QGroupBox</extends>
    <header>my_group_box.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
+   <class>MySpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>my_spin_box.h</header>
   </customwidget>
   <customwidget>
    <class>MyCheckBox</class>
    <extends>QCheckBox</extends>
    <header>my_check_box.h</header>
-  </customwidget>
-  <customwidget>
-   <class>MySpinBox</class>
-   <extends>QSpinBox</extends>
-   <header>my_spin_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
