Thumbnails without MC effects are rendered without OpenCL

--- a/mandelbulber2/qt/render_window.ui
+++ b/mandelbulber2/qt/render_window.ui
@@ -1624,7 +1624,7 @@
      <normaloff>:/system/icons/document-open.svg</normaloff>:/system/icons/document-open.svg</iconset>
    </property>
    <property name="text">
-    <string>Settings browser...</string>
+    <string>Thumbnail browser...</string>
    </property>
   </action>
  </widget>
