Implemented cSettingsBrowser for Load example

--- a/mandelbulber2/qt/settings_browser.ui
+++ b/mandelbulber2/qt/settings_browser.ui
@@ -47,6 +47,11 @@
        </item>
        <item>
         <property name="text">
+         <string>Use OpenCL for MC, HQ</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
          <string>Use OpenCL for all</string>
         </property>
        </item>
